# ChessQT

./: README.md
ChessQT/chessFinal/: Board.cpp  Board.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Menu.cpp  Menu.h  NativeRecommendedRules_sansEnumClass.ruleset  Piece.cpp  Piece.h  ProjetTestQt.sln  ProjetTestQt.vcxproj  ProjetTestQt.vcxproj.filters  Rook.cpp  Rook.h  Square.cpp  Square.h  TestChess.cpp  main.cpp
ChessQT/chessFinal/bibliotheque_cours/: bibliotheque_cours.cpp  verification_allocation.cpp
ChessQT/chessFinal/googletest/include/gmock/: gmock.h
ChessQT/chessFinal/googletest/include/gtest/: gtest.h
ChessQT/chessFinal/googletest/src/: gtest-port.cc
ChessQT/chessFinal/include/: CodeCoverage_bugfix.h  bibliotheque_cours.hpp  debogage_memoire.hpp  verification_allocation.hpp
